# Matrixon

./: .cursorrules  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROJECT_STRUCTURE.md  README.md  rust-toolchain.toml
crates/matrixon-a2a/: Cargo.toml
crates/matrixon-a2a/src/: error.rs  lib.rs
crates/matrixon-a2a/src/crypto/: mod.rs
crates/matrixon-a2a/src/message/: mod.rs
crates/matrixon-a2a/src/protocol/: mod.rs
crates/matrixon-a2a/src/state/: mod.rs
crates/matrixon-a2a/src/transport/: http.rs  mod.rs  websocket.rs
crates/matrixon-ai/: Cargo.toml
crates/matrixon-ai-assistant/: Cargo.toml  README.md
crates/matrixon-ai-assistant/src/: config.rs  lib.rs  mod.rs
crates/matrixon-ai-assistant/src/analyzer/: behavior.rs  mod.rs
crates/matrixon-ai-assistant/src/integration/: mod.rs
crates/matrixon-ai-assistant/src/llm/: mod.rs
crates/matrixon-ai-assistant/src/llm_integration/: mod.rs
crates/matrixon-ai-assistant/src/qa/: mod.rs
crates/matrixon-ai-assistant/src/recommendation/: mod.rs
crates/matrixon-ai-assistant/src/summarizer/: mod.rs
crates/matrixon-ai-assistant/src/translation/: mod.rs
crates/matrixon-ai/src/: error.rs  lib.rs
crates/matrixon-ai/src/handlers/: mod.rs
crates/matrixon-ai/src/mcp/: client.rs  error.rs  mod.rs  server.rs  types.rs
crates/matrixon-ai/src/models/: mod.rs
crates/matrixon-ai/src/services/: mod.rs
crates/matrixon-api/: Cargo.toml
crates/matrixon-api/benches/: api_bench.rs
crates/matrixon-api/examples/: basic_api.rs
crates/matrixon-api/src/: appservice_server.rs  client.rs  error.rs  handlers.rs  lib.rs  middleware.rs  mod.rs  routes.rs  server.rs  server_server.rs
crates/matrixon-api/src/client_server/: account.rs  alias.rs  appservice.rs  async_media.rs  auth_oidc.rs  backup.rs  config.rs  context.rs  directory.rs  filter.rs  keys.rs  math_messages.rs  media.rs  media_authenticated.rs  membership.rs  message.rs  metrics.rs  mod.rs  presence.rs  profile.rs  push.rs  read_marker.rs  relations.rs  report.rs  room.rs  search.rs  session.rs  space.rs  state.rs  sync.rs  sync_sliding.rs  tag.rs  to_device.rs  typing.rs  unversioned.rs  user_directory.rs  well_known.rs
crates/matrixon-api/src/ruma_wrapper/: axum.rs  mod.rs
crates/matrixon-api/tests/: integration_test.rs
crates/matrixon-backup/: Cargo.toml
crates/matrixon-backup/src/: database.rs  error.rs  lib.rs  scheduler.rs  utils.rs
crates/matrixon-backup/tests/: integration.rs
crates/matrixon-bot/: Cargo.toml
crates/matrixon-bot/benches/: bot_bench.rs
crates/matrixon-bot/config/: default.json
crates/matrixon-bot/examples/: bot_example.rs
crates/matrixon-bot/src/: config.rs  lib.rs
crates/matrixon-bot/tests/: integration_test.rs
crates/matrixon-common/: Cargo.toml
crates/matrixon-common/src/: error.rs  lib.rs  utils.rs
crates/matrixon-core/: Cargo.toml
crates/matrixon-core/src/: config.rs  error.rs  lib.rs  mod.rs  traits.rs  types.rs  utils.rs
crates/matrixon-db/: Cargo.toml
crates/matrixon-db/benches/: db_bench.rs
crates/matrixon-db/src/: lib.rs  migrations.rs  mod.rs  models.rs  pool.rs  queries.rs
crates/matrixon-db/src/abstraction/: postgresql_simple.rs  rocksdb.rs  sqlite.rs
crates/matrixon-db/src/key_value/: account_data.rs  bot_management.rs  globals.rs  key_backups.rs  media.rs  mod.rs  pusher.rs  uiaa.rs  users.rs
crates/matrixon-db/src/key_value/rooms/: alias.rs  auth_chain.rs  metadata.rs  mod.rs  outlier.rs  search.rs  short.rs  state_accessor.rs  state_cache.rs  state_compressor.rs  threads.rs  timeline.rs  user.rs
crates/matrixon-db/tests/: integration_test.rs
crates/matrixon-e2ee/: Cargo.toml
crates/matrixon-federation/: Cargo.toml
crates/matrixon-federation/benches/: federation_bench.rs
crates/matrixon-federation/src/: client.rs  config.rs  error.rs  lib.rs  server.rs  traits.rs  types.rs  utils.rs
crates/matrixon-federation/src/federation/: bridge.rs  discovery.rs  e2ee_verification.rs  events.rs  integration_tests.rs  mod.rs  monitoring.rs  relay.rs  routing.rs
crates/matrixon-interface/: Cargo.toml
crates/matrixon-interface/src/: lib.rs
crates/matrixon-iot/: Cargo.toml
crates/matrixon-iot/examples/: basic_iot.rs
crates/matrixon-iot/src/: analytics.rs  device.rs  edge.rs  gateway.rs  lib.rs  matrix_protocol.rs  protocol.rs  security.rs
crates/matrixon-ipfs/: Cargo.toml
crates/matrixon-ipfs/src/: client.rs  config.rs  error.rs  lib.rs  node.rs  storage.rs  types.rs
crates/matrixon-monitor/: Cargo.toml
crates/matrixon-monitor/src/: alert.rs  config.rs  error.rs  health.rs  lib.rs  logging.rs  metrics.rs  performance.rs  system.rs
crates/matrixon-rooms/: Cargo.toml
crates/matrixon-rooms/src/: lib.rs
crates/matrixon-rooms/src/rooms_backup/alias/: data.rs  mod.rs
crates/matrixon-rooms/src/rooms_backup/auth_chain/: data.rs  mod.rs
crates/matrixon-rooms/src/rooms_backup/event_handler/: mod.rs
crates/matrixon-rooms/src/rooms_backup/helpers/: mod.rs
crates/matrixon-rooms/src/rooms_backup/lazy_loading/: data.rs  mod.rs
crates/matrixon-rooms/src/rooms_backup/metadata/: data.rs  mod.rs
crates/matrixon-rooms/src/rooms_backup/outlier/: data.rs
crates/matrixon-rooms/src/rooms_backup/pdu_metadata/: mod.rs
crates/matrixon-rooms/src/rooms_backup/search/: data.rs  mod.rs
crates/matrixon-rooms/src/rooms_backup/spaces/: mod.rs
crates/matrixon-rooms/src/rooms_backup/state/: mod.rs
crates/matrixon-rooms/src/rooms_backup/state_accessor/: data.rs  mod.rs
crates/matrixon-rooms/src/rooms_backup/state_cache/: data.rs  mod.rs
crates/matrixon-rooms/src/rooms_backup/state_compressor/: mod.rs
crates/matrixon-rooms/src/rooms_backup/threads/: data.rs  mod.rs
crates/matrixon-rooms/src/rooms_backup/timeline/: data.rs  mod.rs
crates/matrixon-web3/: Cargo.toml
crates/matrixon-web3/benches/: bench.rs
crates/matrixon-web3/examples/: demo.rs
crates/matrixon-web3/src/: client.rs  contracts.rs  error.rs  events.rs  lib.rs  wallet.rs
crates/matrixon-web3/tests/: integration_test.rs  test_abi.json
debian/: README.md  (+5 more)
(+417 files in other folders)
