[package]
name = "matrixon-a2a"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
license = "MIT"
repository = "https://github.com/arksong/Matrixon"
description = "Agent-to-Agent (A2A) protocol implementation for Matrixon"
readme = "README.md"

[dependencies]
ruma = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
matrixon-common = { workspace = true }
matrixon-ai = { workspace = true }
http = "1.3.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# A2A Protocol dependencies
tokio-tungstenite = "0.20"
futures-util = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
sha2 = "0.10"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
aes-gcm = "0.10"
rand = "0.8"
async-channel = "2.1"
dashmap = "5.5"
async-rwlock = "0.1"
async-mutex = "0.1"
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = { workspace = true }
test-log = { workspace = true }
mockall = "0.12"
proptest = "1.4"
