[package]
name = "matrixon-ai-assistant"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
license = "MIT"
repository = "https://github.com/arksong/Matrixon"
description = "AI assistant services for Matrixon"
readme = "README.md"

[dependencies]
ruma = { workspace = true, features = ["client-api", "events"] }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
matrixon-common = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }
http = "1.3.1"

[dev-dependencies]
tokio-test = { workspace = true }
test-log = { workspace = true }
