[package]
name = "matrixon-api"
version = "0.11.0-alpha"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "API layer for Matrixon - Ultra High Performance Matrix NextServer"
license = "Apache-2.0/MIT"
repository = "https://github.com/arksong2018/Matrixon"

[dependencies]
# Core dependencies
matrixon-core = { path = "../matrixon-core" }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }

# Matrix dependencies
ruma = { version = "0.12.3", features = ["client-api"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
test-log = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "api_bench"
harness = false
