[package]
name = "matrixon-bot"
version = "0.11.0-alpha"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/arksong2018/Matrixon"
description = "Matrixon Bot Service"

[dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures-util = "0.3"

# Matrix dependencies
matrix-sdk = { version = "0.12.0", default-features = false, features = ["js", "rustls-tls"] }
ruma = { version = "0.12.3", features = ["client-api"] }

# Database
matrixon-db = { path = "../matrixon-db" }
matrixon-core = { path = "../matrixon-core" }

# Configuration
config = "0.13"
dirs = "5.0"

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.10"
test-log = "0.2" 
