[package]
name = "matrixon-federation"
version = "0.11.0-alpha"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Matrixon Federation Library - Matrix Server-Server API implementation for ultra high performance"
license = "Apache-2.0/MIT"
repository = "https://github.com/arksong2018/Matrixon"

[dependencies]
# Core workspace dependencies
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }

# Matrix dependencies
ruma = { workspace = true }

# Database
sqlx = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
ring = "0.17"
rand = "0.8"

# Local workspace dependencies
matrixon-core = { workspace = true }
matrixon-common = { workspace = true }
matrixon-db = { workspace = true }

# Federation specific dependencies
argon2 = "0.5"
deadpool = "0.10"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
proptest = { version = "1.4", optional = true }
criterion = { version = "0.5", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
test-log = "0.2"
tempfile = "3.8"
rstest = "0.18"

[features]
default = []
testing = ["dep:proptest"]
bench = ["dep:criterion"]
