[package]
name = "matrixon-interface"
version = "0.11.0-alpha"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Matrixon Interface Module - User Interface Components for Matrix Server"
license = "Apache-2.0/MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }

# Template engine
askama = "0.12"

# UI components
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "console",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Blob",
    "Url",
    "FormData",
    "File",
    "FileReader",
    "FileReaderSync",
    "ProgressEvent",
    "DragEvent",
    "DataTransfer",
    "DataTransferItemList",
    "DataTransferItem",
] }
js-sys = "0.3"

# Styling
stylist = "0.13"
stylist-macros = "0.13"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
base64 = "0.21"
url = "2.5"
mime = "0.3"
mime_guess = "2.0"

# Matrix dependencies
ruma = { version = "0.12.3", features = ["client-api"] }
matrix-sdk = { version = "0.12.0", default-features = false, features = ["js", "rustls-tls"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.10"
test-log = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console"] } 
