[package]
name = "matrixon-monitor"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Matrixon monitoring and metrics collection system"

[dependencies]
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Metrics collection
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
prometheus = "0.13"
once_cell = "1.18"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System metrics
sysinfo = "0.30"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP server for metrics endpoint
axum = { version = "0.7", features = ["json", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
test-log = "0.2"
tracing-test = "0.2"
