[package]
name = "matrixon-web3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web3 blockchain integration for Matrixon Matrix Server"
readme = "README.md"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
web3 = "0.19"
hex = "0.4"
rand = "0.8"
secp256k1 = { version = "0.27", features = ["rand"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
matrixon-common = { path = "../matrixon-common" }

[dev-dependencies]
tokio-test = "0.4"
test-log = "0.2"
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
